@@ -25,6 +25,10 @@ Changes in 0.4.0, (SVN trunk):
    - [ADD]   New runtime control via the SIGUSR2 signal, which triggers reading
              of fresh metadata information from <metadata_progname> (metadata
              is always read at song changes.)
+   - [ADD]   New <metadata_format> configuration option, to customize metadata
+             strings when used with the new <metadata_progname> feature.
+   - [ADD]   New '@a@' and '@t@' placeholders for separate artist and title
+             metadata in de-/encoder commands.
 
 
 
